# vk-calls-tunnel

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
cmd/client/: main.go
cmd/server/: main.go
internal/dtls/: wrapper.go
internal/session/: manager.go
internal/turn/: client.go  credentials.go
scripts/: run-macos.sh
src/vk_tunnel/: __main__.py  config.py
src/vk_tunnel/bot/: main.py  proxy_engine.py
src/vk_tunnel/client/: main.py  socks5_server.py
src/vk_tunnel/codec/: base.py  direct_opus.py  fec.py
src/vk_tunnel/transport/: frame.py  mux.py  protocol.py
src/vk_tunnel/utils/: logging.py  stats.py
src/vk_tunnel/vk/: auth.py  browser_bridge.py  call_manager.py
tests/: conftest.py  test_codec.py  test_frame.py  test_protocol.py  test_socks5.py
